동영상 소스 변경 테스트

--- a/_posts/2021-07-12-테스트-페이지-작성.markdown
+++ b/_posts/2021-07-12-테스트-페이지-작성.markdown
@@ -89,5 +89,4 @@ categories: test
 #### Videos
 
 ###### Youtube
-
-<iframe src="https://youtu.be/cmh0rA3yTyc" frameborder="0" allowfullscreen></iframe>
+<iframe width="1280" height="720" src="https://www.youtube.com/embed/cmh0rA3yTyc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
